--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,10 +68,10 @@ android {
 
     signingConfigs {
         release {
-            keyAlias keystoreProperties['keyAlias']
-            keyPassword keystoreProperties['keyPassword']
-            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
-            storePassword keystoreProperties['storePassword']
+            keyAlias "upload"
+            keyPassword "12345678"
+            storeFile file("../app/upload-keystore.jks")
+            storePassword "12345678"
         }
     }
 
